# sistema_mercado

./: Dockerfile  app.py  app_price.py  chat.py  config.py  create_db.ipynb  database_manager.py  pyproject.toml  recomendacao.ipynb  recomendador_app.py  supermarket_sales.db
app/: requirements.txt
